add auth jwt
