# internal/controller/account/login_controller.go
@@ -15,14 +15,30 @@ var Login = new(cUserLogin)
 
 type cUserLogin struct{}
 
+// User Login documentation
+// @Summary      User Login
+// @Description  User Login
+// @Tags         account management
+// @Accept       json
+// @Produce      json
+// @Param        payload  body  dto.LoginRequest true "payload"
+// @Success      200  {object}  response.ResponseData
+// @Failure      500  {object}  response.ErrorResponseData
+// @Router       /users/login [post]
 func (c *cUserLogin) Login(ctx *gin.Context) {
-	err := service.UserLogin().Login(ctx)
-	if err != nil {
+	var params dto.LoginRequest
+	if err := ctx.ShouldBindJSON(&params); err != nil {
 		response.ErrorResponse(ctx, response.ErrCodeParamInvalid, err.Error())
 		return
 	}
 
-	response.SuccessResponse(ctx, response.ErrCodeSuccess, nil)
+	codeStatus, result, err := service.UserLogin().Login(ctx, &params)
+	if err != nil {
+		response.ErrorResponse(ctx, codeStatus, err.Error())
+		return
+	}
+
+	response.SuccessResponse(ctx, codeStatus, result)
 }
 
 // User Registration documentation
